--- a/data_wrangling_1.Rmd
+++ b/data_wrangling_1.Rmd
@@ -4,3 +4,20 @@ author: "Qinting Shen"
 date: "2023-09-19"
 output: github_document
 ---
+
+```{r}
+library(tidyverse)
+```
+
+
+let's import the `FAS_litters.csv` csv.
+
+```{r}
+litters_df=
+  read_csv("data/FAS_litters.csv")
+
+litters_df=
+  janitor::clean_names(litters_df)
+
+```
+
