--- a/data_wrangling_1.Rmd
+++ b/data_wrangling_1.Rmd
@@ -7,6 +7,8 @@ output: github_document
 
 ```{r}
 library(tidyverse)
+library(readxl)
+library(haven)
 ```
 
 
@@ -54,6 +56,87 @@ Look at a data summary
 str(litters_df)
 
 skimr::skim(litters_df)
+```
+
+
+
+## Opions in `read_*`
+
+```{r}
+litters_df=
+  read_csv(
+    "data/FAS_litters.csv",
+    skip = 10, col_names = FALSE)
+```
+
+Look at `NA` value
+
+```{r}
+litters_df=
+  read_csv(
+    "data/FAS_litters.csv",
+    na=c("NA",19,"."))
+```
+
+
+column types
+
+```{r}
+litters_df=
+  read_csv(
+    "data/FAS_litters.csv",
+    col_types = 
+      cols(
+        `GD0 weight`=col_character()
+      ))
+
+```
+
+
+## Other file types
+
+
+import a xlsx file first.
+
+```{r}
+mlb_df=
+  read_excel("data/mlb11.xlsx")
+```
+
+import a SAS file
+
+```{r}
+pulse_df=
+  read_sas("data/public_pulse_data.sas7bdat")
+```
+
+
+## Base R ...
+
+don't do this
+
+```{r, eval=FALSE}
+litters_df=
+  read.csv("data/FAS_litters.csv")
+
+litters_df$Gr
+
+```
+
+
+
+## Export data
+
+We have code that "clear"
+
+```{r}
+litters_df_clean=
+  read_csv("data/FAS_litters.csv")
+
+litters_df_clean=
+  janitor::clean_names(litters_df_clean)
+
+write_csv(litters_df_clean, "data/litters_clean.csv")
 ```
 
 
