--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -9,3 +9,85 @@ output: github_document
 library(tidyverse)
 ```
 
+## import data
+```{r}
+litters_data = read_csv("./data/FAS_litters.csv",
+  col_types = "ccddiiii")
+litters_data = janitor::clean_names(litters_data)
+
+pups_data = read_csv("./data/FAS_pups.csv",
+  col_types = "ciiiii")
+pups_data = janitor::clean_names(pups_data)
+
+```
+
+## `select` function 
+
+will not save anything, just select
+
+```{r}
+select(litters_data, group, litter_number, gd0_weight, pups_born_alive)
+select(litters_data, GROUP = group, LiTtEr_NuMbEr = litter_number)
+select(litters_data, group:gd_of_birth)
+select(litters_data, -litter_number)
+select(litters_data, starts_with("gd"))
+select(litters_data, group, litter_id = litter_number, everything())
+select(litters_data, gd0_weight, everything())
+
+```
+
+```{r}
+rename(litters_data, litter_id = litter_number)
+
+relocate(litters_data, litter_number)
+```
+
+
+
+`select` vs `pull`
+```{r}
+select(litters_data, group)
+pull(litters_data, group)
+```
+
+
+### learning assessment 1
+
+```{r}
+select(pups_data, litter_number, sex, pd_ears)
+```
+
+
+
+
+## `filter`
+
+get rid of rows using `filter`
+
+```{r}
+filter(litters_data, group == "Con7")
+
+filter(litters_data, group == "Mod8")
+
+filter(litters_data, group != "Mod8")
+
+filter(litters_data, gd0_weight > 20)
+
+filter(litters_data, gd0_weight <= 20)
+
+filter(litters_data, group == "Con7" |group == "Con8")
+
+filter(litters_data, group %in% c("Con7" , "Con8"))
+
+filter(litters_data, !(group == "Con7"))
+
+filter(litters_data, group %in% c("Con7" , "Con8"), gd0_weight > 20)
+
+```
+
+
+
+
+
+
+
