--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -123,10 +123,19 @@ arrange(litters_data, group,  gd0_weight)
 ```
 
 
-## `pipes`
+## pipes
 
 ```{r}
-
+litters_data =
+  read_csv("data/FAS_litters.csv") %>% 
+  janitor::clean_names() %>% 
+  select(-starts_with("pups")) %>% 
+    mutate(
+      group = str_to_lower(group),
+      wt_gain = gd18_weight - gd0_weight,
+     ) %>% 
+    drop_na(wt_gain) %>% 
+    arrange(group, wt_gain)
 ```
 
 
