--- a/tidy_data.Rmd
+++ b/tidy_data.Rmd
@@ -73,8 +73,38 @@ lotr_tidy =
     female:male,
     names_to = "gender", 
     values_to = "words") |>
+  relocate(movie) |> 
   mutate(race = str_to_lower(race)) |> 
   select(movie, everything()) 
+
+```
+
+## revisit FAS
+
+```{r}
+litter_data = 
+  read_csv("./data/FAS_litters.csv") |>
+  janitor::clean_names() |>
+  separate(group, into = c("dose", "day_of_tx"), sep = 3) |>
+  relocate(litter_number) |>
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    dose = str_to_lower(dose))
+```
+
+## pups
+
+```{r}
+pup_data = 
+  read_csv("./data/FAS_pups.csv") |>
+  janitor::clean_names() |> 
+  mutate(
+  sex = 
+    case_match(
+      sex, 
+      1 ~ "male", 
+      2 ~ "female"),
+   sex = as.factor(sex))
 
 ```
 
